argocd/clusters/wheatley/live/automation-esp-fw/app/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: fw-download
  namespace: home-automation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fw-download
  template:
    metadata:
      creationTimestamp: null
      annotations:
        backup.velero.io/backup-volumes: firmware
      labels:
        app: fw-download
    spec:
      volumes:
        - name: firmware
          persistentVolumeClaim:
            claimName: firmware-storage
      containers:
        - resources: {}
          terminationMessagePath: /dev/termination-log
          name: httpd
          livenessProbe:
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 1
          ports:
            - containerPort: 8080
              protocol: TCP
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: firmware
              mountPath: /var/www/html
          terminationMessagePolicy: File
          image: >-
            quay.signal9.gg/home-automation/fw-download-httpd:latest
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
