argocd/clusters/wheatley/live/automation-esp-fw/app/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: fw-download
  namespace: home-automation
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: fw-download
  type: ClusterIP
  sessionAffinity: None
