argocd/clusters/wheatley/live/automation-esp-fw/app/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: fw-download
  namespace: home-automation
  labels:
    signal9-internal: ''
spec:
  host: fw-download.int-apps.atlas.lab.signal9.gg
  to:
    kind: Service
    name: fw-download
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
  wildcardPolicy: None
